# ansible-role-acme-certificate-cloudflare

./: .ansible-lint  .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .talismanrc  .yamllint  LICENSE  Makefile  README.md  devbox.json  pyproject.toml  requirements.txt  requirements.yml  tox.ini
.github/workflows/: keepalive.yml  lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: ::w  Dockerfile.j2  converge.yml  create.yml  molecule.yml  playbook.yml  prepare.yml  requirements.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
vars/: Debian.yml  RedHat.yml  main.yml
